# Facultate

Year1/Second semester/Data Structures and Algorithms/SDAlab6/SDAlab6/: CMakeLists.txt  DO.cpp  DO.h  Iterator.cpp  Iterator.h  SDAlab6.cpp  SDAlab6.vcxproj  SDAlab6.vcxproj.filters  TestExtins.cpp  TestScurt.cpp
Year1/Second semester/OOP/lab 7/VectorDinamicCPP (1)/VectorDinamicCPP/VectorDinamicCPP/: CMakeLists.txt  VectDinNewDelete.cpp  VectDinNewDelete.h  VectorDinamicIlinca.h  VectorDinamicTemplate.h  clion-log.txt  main.cpp
Year1/Second semester/OOP/lab 7/VectorDinamicCPP (1)/VectorDinamicCPP/VectorDinamicCPP/x64/Debug/: Pet.nativecodeanalysis.sarif  VectDinNewDelete.nativecodeanalysis.sarif  VectDinSmartPointer.nativecodeanalysis.sarif  VectDinSmartPointer.nativecodeanalysis.xml  VectorDinamicCPP.exe.recipe  (+6 more)
Year1/Second semester/OOP/lab00p4bun/: CMakeLists.txt  lab00p4bun.sln  repo.c  repo.h
Year1/Second semester/OOP/lab00p4bun/lab00p4bun/: element.c  element.h  lab00p4bun.vcxproj  lab00p4bun.vcxproj.filters  lista.c  lista.h  main.c  service.c  service.h  teste.c  teste.h
Year1/Second semester/OOP/lab00p4bun/lab00p4bun/.opencppcov/lab00p4bun/: Debug_x64.json
Year1/Second semester/OOP/lab00p4bun/lab00p4bun/x64/Debug/: lab00p4bun.exe.recipe  lab00p4bun.ilk  service.obj.enc  teste.obj.enc  vc143.idb
Year1/Second semester/OOP/lab00p4bun/lab00p4bun/x64/Debug/lab00p4bun.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab00p4bun.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Year1/Second semester/OOP/lab9-probabilitati/: CMakeLists.txt  Medicament.cpp  Medicament.h  Repository.cpp  Repository.h  Reteta.cpp  Reteta.h  Service.cpp  Service.h  Teste.cpp  Teste_fisiere.cpp  Teste_fisiere.h  Teste_reteta.cpp  Teste_reteta.h  UI.cpp  UI.h  Undo.cpp  Undo.h  Validators.h  main.cpp  medicamente.txt  unique_ptr.h
(+898 files in other folders)
