cmake_minimum_required(VERSION 3.16)
project(lab4_6oop)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab4_6oop main.cpp Medicament.cpp Medicament.h Validators.h Repository.cpp Repository.h Service.cpp Service.h Teste.cpp Teste.h UI.cpp UI.h VectorDinamicTemplate.h Reteta.cpp Reteta.h Teste_reteta.cpp Teste_reteta.h Undo.cpp Undo.h unique_ptr.h Teste_fisiere.cpp Teste_fisiere.h)
